--- a/views/comments.html
+++ b/views/comments.html
@@ -1,82 +1,1 @@
-<header class="headerWhite">
-	<a href="/offer" class="headerWhite-action">
-		<svg class="icon icon-back">
-			<use xlink:href="#icon-back"></use>
-		</svg>
-	</a>
-
-	<h1 class="headerWhite-name">
-		CORONA 355ml (6 uni.)
-	</h1>
-</header>
-
-<main class="commentsMain">
-
-    <section class="comments">
-        <figure class="comments-img">
-            <img src="assets/img/exemplo/user.png" alt="Felipe">
-        </figure>
-        <div class="comments-info">
-            <p>
-                Tinha bastante ainda?
-            </p>
-            <h2 class="comments-userName">
-                João Leno
-            </h2>
-            <span class="comments-time">
-                 há 3 horas
-            </span>
-        </div>
-    </section>
-
-    <section class="comments comments-userSpeak">
-        <figure class="comments-img">
-            <img src="assets/img/exemplo/user.png" alt="Felipe">
-        </figure>
-        <div class="comments-info">
-            <p>
-                Tinha bastante ainda?
-            </p>
-            <h2 class="comments-userName">
-                João Leno
-            </h2>
-            <span class="comments-time">
-                 há 3 horas
-            </span>
-        </div>
-    </section>
-
-    <section class="comments">
-        <figure class="comments-img">
-            <img src="assets/img/exemplo/user.png" alt="Felipe">
-        </figure>
-        <div class="comments-info">
-            <p>
-                Tinha bastante ainda?
-            </p>
-            <h2 class="comments-userName">
-                João Leno
-            </h2>
-            <span class="comments-time">
-                 há 3 horas
-            </span>
-        </div>
-    </section>
-
-    <section class="commentsAdd">
-        <label for="comments">
-    		<svg class="icon icon-comment">
-    			<use xlink:href="#icon-comment"></use>
-    		</svg>
-        </label>
-
-        <textarea id="comments" class="commentsAdd-input" placeholder="Comentar..."></textarea>
-
-        <button class="commentsAdd-btn">
-            <svg class="icon icon-check">
-    			<use xlink:href="#icon-check"></use>
-    		</svg>
-        </button>
-    </section>
-
-</main>
+<header class="headerWhite"><a href="/offer" class="headerWhite-action"><svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg></a><h1 class="headerWhite-name">CORONA 355ml (6 uni.)</h1></header><main class="commentsMain"><section class="comments"><figure class="comments-img"><img src="assets/img/exemplo/user.png" alt="Felipe"></figure><div class="comments-info"><p>Tinha bastante ainda?</p><h2 class="comments-userName">João Leno</h2><span class="comments-time">há 3 horas</span></div></section><section class="comments comments-userSpeak"><figure class="comments-img"><img src="assets/img/exemplo/user.png" alt="Felipe"></figure><div class="comments-info"><p>Tinha bastante ainda?</p><h2 class="comments-userName">João Leno</h2><span class="comments-time">há 3 horas</span></div></section><section class="comments"><figure class="comments-img"><img src="assets/img/exemplo/user.png" alt="Felipe"></figure><div class="comments-info"><p>Tinha bastante ainda?</p><h2 class="comments-userName">João Leno</h2><span class="comments-time">há 3 horas</span></div></section><section class="commentsAdd"><label for="comments"><svg class="icon icon-comment"><use xlink:href="#icon-comment"></use></svg></label><textarea id="comments" class="commentsAdd-input" placeholder="Comentar..."></textarea><button class="commentsAdd-btn"><svg class="icon icon-check"><use xlink:href="#icon-check"></use></svg></button></section></main>
