--- a/views/login.html
+++ b/views/login.html
@@ -1,20 +1,1 @@
-<main class="login">
-    <h1 class="login-title">
-        O caminho mais curto para os descontos
-    </h1>
-    <img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164">
-
-    <div class="login-actionBtns">
-        <a href="http://localhost:3003/auth/facebook" class="btn btn-blue login-btn">
-            Entrar com facebook
-        </a>
-
-        <a href="/entrar-email" class="btn btn-white login-btn">
-            Entrar com e-mail
-        </a>
-
-        <a href="/criar-conta" class="btn btn-black login-btn">
-            não tenho conta
-        </a>
-    </div>
-</main>
+<main class="login"><h1 class="login-title">O caminho mais curto para os descontos</h1><img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164"><div class="login-actionBtns"><a ng-href="{{apiUrl}}/auth/facebook" class="btn btn-blue login-btn">Entrar com facebook </a><a href="/entrar-email" class="btn btn-white login-btn">Entrar com e-mail </a><a href="/criar-conta" class="btn btn-black login-btn">não tenho conta</a></div></main>
