--- a/views/offer.html
+++ b/views/offer.html
@@ -1,110 +1,1 @@
-<header class="headerWhite singleOfferHeader js-singleOfferHeader">
-	<a href="/" class="headerWhite-action singleOfferHeader-back">
-		<svg class="icon icon-back">
-			<use xlink:href="#icon-back"></use>
-		</svg>
-	</a>
-
-	<strong class="headerWhite-name">
-		CORONA 355ml (6 uni.)
-	</strong>
-
-	<a href="#comparti" class="headerWhite-action singleOfferHeader-shared">
-		<svg class="icon icon-shared">
-			<use xlink:href="#icon-shared"></use>
-		</svg>
-	</a>
-
-	<a href="#option" class="headerWhite-action singleOfferHeader-option">
-		<svg class="icon icon-option">
-			<use xlink:href="#icon-option"></use>
-		</svg>
-	</a>
-</header>
-
-<main class="singleOffer">
-
-	<img src="assets/img/exemplo/oferta-2.jpg" alt="Oferta" class="singleOffer-img">
-
-	<section class="u-margin-container">
-		<h1 class="singleOffer-name">
-			<strong class="singleOffer-price">
-				R$ 20,94
-			</strong>
-			CORONA 355ml (6 uni.)
-		</h1>
-
-		<div class="singleOffer-action">
-			<a href="/comments" class="singleOffer-btn">
-				<svg class="icon icon-comment">
-					<use xlink:href="#icon-comment"></use>
-				</svg>
-				<span class="singleOffer-btn-count">
-					54
-				</span>
-			</a>
-			<a href="#" class="singleOffer-btn active">
-				<svg class="icon icon-pig">
-					<use xlink:href="#icon-pig"></use>
-				</svg>
-				<span class="singleOffer-btn-count">
-					433
-				</span>
-			</a>
-		</div>
-
-
-		<p class="singleOffer-info">
-			Preço do pack de 6 unidades. E tão vendendo
-			a cerveja já gelada tb. Já sai tomando uma...
-		</p>
-
-	</section>
-
-	<div class="singleOffer-time">
-		<svg class="icon icon-time">
-			<use xlink:href="#icon-time"></use>
-		</svg>
-		1 Semana atrás
-	</div>
-
-	<section class="singleOffer-location">
-		<svg class="icon icon-map">
-			<use xlink:href="#icon-map"></use>
-		</svg>
-		<a href="#">
-			<h2 class="singleOffer-location-name">
-				Carrefour Vila Clementino
-			</h2>
-		</a>
-		9 KM de distância de você
-	</section>
-
-	<div class="u-margin-container">
-		<img src="assets/img/exemplo/mapa.png" alt="Localização">
-	</div>
-
-	<div class="u-margin-container">
-		<button class="btn btn-purple">
-			Ir até a oferta
-		</button>
-		<a href="/comments" class="btn btn-black">
-			<svg class="icon icon-comment">
-		        <use xlink:href="#icon-comment"></use>
-		    </svg>
-			Comenta aí!
-		</a>
-	</div>
-
-	<figure class="singleOffer-user u-margin-container">
-		<img src="assets/img/exemplo/user.png" alt="Felipe Teixeira" class="singleOffer-user-img">
-		<figcaption class="singleOffer-user-name">
-			Publicado por
-			<a href="/perfil" class="singleOffer-user-name-link">
-				Felipe Teixeira
-			</a >
-		</figcaption>
-	</figure>
-
-	<div ng-include="'views/partials/menu.html'"></div>
-</main>
+<header class="headerWhite singleOfferHeader js-singleOfferHeader"><a href="/" class="headerWhite-action singleOfferHeader-back"><svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg> </a><strong class="headerWhite-name">CORONA 355ml (6 uni.) </strong><a href="#comparti" class="headerWhite-action singleOfferHeader-shared"><svg class="icon icon-shared"><use xlink:href="#icon-shared"></use></svg> </a><a href="#option" class="headerWhite-action singleOfferHeader-option"><svg class="icon icon-option"><use xlink:href="#icon-option"></use></svg></a></header><main class="singleOffer"><img src="assets/img/exemplo/oferta-2.jpg" alt="Oferta" class="singleOffer-img"><section class="u-margin-container"><h1 class="singleOffer-name"><strong class="singleOffer-price">R$ 20,94 </strong>CORONA 355ml (6 uni.)</h1><div class="singleOffer-action"><a href="/comments" class="singleOffer-btn"><svg class="icon icon-comment"><use xlink:href="#icon-comment"></use></svg> <span class="singleOffer-btn-count">54 </span></a><a href="#" class="singleOffer-btn active"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg> <span class="singleOffer-btn-count">433</span></a></div><p class="singleOffer-info">Preço do pack de 6 unidades. E tão vendendo a cerveja já gelada tb. Já sai tomando uma...</p></section><div class="singleOffer-time"><svg class="icon icon-time"><use xlink:href="#icon-time"></use></svg> 1 Semana atrás</div><section class="singleOffer-location"><svg class="icon icon-map"><use xlink:href="#icon-map"></use></svg> <a href="#"><h2 class="singleOffer-location-name">Carrefour Vila Clementino</h2></a>9 KM de distância de você</section><div class="u-margin-container"><img src="assets/img/exemplo/mapa.png" alt="Localização"></div><div class="u-margin-container"><button class="btn btn-purple">Ir até a oferta</button> <a href="/comments" class="btn btn-black"><svg class="icon icon-comment"><use xlink:href="#icon-comment"></use></svg> Comenta aí!</a></div><figure class="singleOffer-user u-margin-container"><img src="assets/img/exemplo/user.png" alt="Felipe Teixeira" class="singleOffer-user-img"><figcaption class="singleOffer-user-name">Publicado por <a href="/perfil" class="singleOffer-user-name-link">Felipe Teixeira</a></figcaption></figure><div ng-include="'views/partials/menu.html'"></div></main>
