--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,7 +1,1 @@
-
-	<img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="80" height="26" class="header-logo">
-	<a href="#search" class="header-btnSearch js-btnSearch">
-		<svg class="icon icon-search">
-			<use xlink:href="#icon-search"></use>
-		</svg>
-	</a>
+<img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="80" height="26" class="header-logo"> <a href="#search" class="header-btnSearch js-btnSearch"><svg class="icon icon-search"><use xlink:href="#icon-search"></use></svg></a>
