--- a/views/partials/navCategory.html
+++ b/views/partials/navCategory.html
@@ -1,51 +1,1 @@
-<nav class="navCategory">
-    <a href="#" class="navCategory-link">
-        <svg class="icon icon-cat-food">
-            <use xlink:href="#icon-cat-food"></use>
-        </svg>
-        <strong class="navCategory-link-name">
-            Alimentos
-        </strong>
-    </a>
-    <a href="#" class="navCategory-link active">
-        <svg class="icon icon-cat-drink">
-            <use xlink:href="#icon-cat-drink"></use>
-        </svg>
-        <strong class="navCategory-link-name">
-            Bebidas
-        </strong>
-    </a>
-    <a href="#" class="navCategory-link">
-        <svg class="icon icon-cat-shoe">
-            <use xlink:href="#icon-cat-shoe"></use>
-        </svg>
-        <strong class="navCategory-link-name">
-            Calçados
-        </strong>
-    </a>
-    <a href="#" class="navCategory-link">
-        <svg class="icon icon-cat-home">
-            <use xlink:href="#icon-cat-home"></use>
-        </svg>
-        <strong class="navCategory-link-name">
-            Casa
-        </strong>
-    </a>
-    <a href="#" class="navCategory-link">
-        <svg class="icon icon-cat-electronic">
-            <use xlink:href="#icon-cat-electronic"></use>
-        </svg>
-        <strong class="navCategory-link-name">
-            Eletrônicos
-        </strong>
-    </a>
-    <a href="#" class="navCategory-link">
-        <svg class="icon icon-cat-game">
-            <use xlink:href="#icon-cat-game"></use>
-        </svg>
-        <strong class="navCategory-link-name">
-            Games
-
-        </strong>
-    </a>
-</nav>
+<nav class="navCategory"><a href="#" class="navCategory-link"><svg class="icon icon-cat-food"><use xlink:href="#icon-cat-food"></use></svg> <strong class="navCategory-link-name">Alimentos </strong></a><a href="#" class="navCategory-link active"><svg class="icon icon-cat-drink"><use xlink:href="#icon-cat-drink"></use></svg> <strong class="navCategory-link-name">Bebidas </strong></a><a href="#" class="navCategory-link"><svg class="icon icon-cat-shoe"><use xlink:href="#icon-cat-shoe"></use></svg> <strong class="navCategory-link-name">Calçados </strong></a><a href="#" class="navCategory-link"><svg class="icon icon-cat-home"><use xlink:href="#icon-cat-home"></use></svg> <strong class="navCategory-link-name">Casa </strong></a><a href="#" class="navCategory-link"><svg class="icon icon-cat-electronic"><use xlink:href="#icon-cat-electronic"></use></svg> <strong class="navCategory-link-name">Eletrônicos </strong></a><a href="#" class="navCategory-link"><svg class="icon icon-cat-game"><use xlink:href="#icon-cat-game"></use></svg> <strong class="navCategory-link-name">Games</strong></a></nav>
