--- a/views/partials/offer-list.html
+++ b/views/partials/offer-list.html
@@ -1,52 +1,1 @@
-<section class="offer-list clear">
-    <h2 class="offer-distance js-offer-distance" data-ng-show="homeCtrl.getLocationAvaialable">
-        <svg class="icon icon-location">
-            <use xlink:href="#icon-location"></use>
-        </svg>
-        Até {{ homeCtrl.maxCurrentDistance }} km de você
-    </h2>
-
-    <ul>
-        <li class="offer" data-ng-repeat="offer in homeCtrl.offers">
-            <a href="/offer">
-                <img data-ng-src="{{offer.file.imageLowUrl}}" alt="{{offer.description}}" class="offer-img">
-            </a>
-
-            <div class="offer-body">
-                <strong class="offer-body-price">
-                    R$ {{offer.price}}
-                </strong>
-                <h3 class="offer-body-description">
-                  {{offer.description}}
-                </h3>
-
-                <a href="#location" class="offer-body-location">
-                    <svg class="icon icon-map">
-                        <use xlink:href="#icon-map"></use>
-                    </svg>
-                    {{offer.place.name}}
-                </a>
-                <div class="offer-actions clear">
-                    <a href="/comments" class="offer-actions-btn">
-                        <svg class="icon icon-comment">
-                            <use xlink:href="#icon-comment"></use>
-                        </svg>
-                        <span class="offer-actions-btn-count">
-                            {{offer.qtd_comments}}
-                        </span>
-                    </a>
-                    <a href="#like" class="offer-actions-btn active">
-                        <svg class="icon icon-pig">
-                            <use xlink:href="#icon-pig"></use>
-                        </svg>
-                        <span class="offer-actions-btn-count">
-                            {{offer.qtd_likes}}
-                        </span>
-                    </a>
-                </div>
-            </div>
-
-        </li>
-
-    </ul>
-</section>
+<section class="offer-list clear"><h2 class="offer-distance js-offer-distance" data-ng-show="homeCtrl.getLocationAvaialable"><svg class="icon icon-location"><use xlink:href="#icon-location"></use></svg> Até {{ homeCtrl.maxCurrentDistance }} km de você</h2><ul><li class="offer" data-ng-repeat="offer in homeCtrl.offers"><a href="/offer"><img data-ng-src="{{offer.image}}" alt="{{offer.description}}" class="offer-img"></a><div class="offer-body"><strong class="offer-body-price">R$ {{offer.price}}</strong><h3 class="offer-body-description">{{offer.description}}</h3><a href="#location" class="offer-body-location"><svg class="icon icon-map"><use xlink:href="#icon-map"></use></svg> {{offer.place.name}}</a><div class="offer-actions clear"><a href="/comments" class="offer-actions-btn"><svg class="icon icon-comment"><use xlink:href="#icon-comment"></use></svg> <span class="offer-actions-btn-count">{{offer.qtd_comments}} </span></a><a href="#like" class="offer-actions-btn active"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg> <span class="offer-actions-btn-count">{{offer.qtd_likes}}</span></a></div></div></li></ul></section>
