--- a/views/partials/publish/1-step-photo.html
+++ b/views/partials/publish/1-step-photo.html
@@ -1,81 +1,1 @@
-<header class="publishHeader">
-    <a href="/" class="header-action header-action-purple">
-        <svg class="icon icon-back">
-            <use xlink:href="#icon-back"></use>
-        </svg>
-    </a>
-</header>
-
-<main class="publishMain">
-    <section class="publish-progress">
-        <svg class="icon icon-pig">
-            <use xlink:href="#icon-pig"></use>
-        </svg>
-
-        <span class="publish-progress-iconHidden" data-ng-class="{'publish-progress-iconHidden-2': step1Ctrl.hasImage}">
-            <svg class="icon icon-pig">
-                <use xlink:href="#icon-pig"></use>
-            </svg>
-        </span>
-    </section>
-
-    <section class="publish publishStep-maxWidth" data-ng-show="!step1Ctrl.hasImage">
-
-        <h1 class="publish-title">
-            Boa! Uma oferta!
-        </h1>
-
-        <h2 class="publish-subtitle">
-            Primeiro, tire uma foto do produto com a etiqueta do preço
-            indicando a promoção:
-        </h2>
-
-
-        <label class="imgAdd">
-            <input type="file" id="offer-image-file" accept="image/*">
-
-            <svg class="icon icon-add-photo">
-                <use xlink:href="#icon-add-photo"></use>
-            </svg>
-        </label>
-
-        <button class="btn btn-purple" ui-sref="publishTwoStep" data-ng-disabled="!step1Ctrl.hasImage">
-            Próxima etapa!
-        </button>
-
-    </section>
-
-    <!-- IMG LOAD SHOW -->
-    <section class="publish" data-ng-show="step1Ctrl.hasImage">
-
-        <h1 class="publish-title publishStep-maxWidth">
-            Aí sim!
-        </h1>
-
-        <h2 class="publish-subtitle publishStep-maxWidth">
-            Tudo certo? A foto do produto mostra a
-            etiqueta do preço indicando a promoção
-        </h2>
-
-        <figure class="publish-imgOffer">
-            <image-cropper
-                image-url="assets/img/exemplo/itaipava.jpg"
-                show-controls="false"
-
-                center-on-init="true"
-                api="step1Ctrl.cropperApi"
-                crop-callback="step1Ctrl.updateResultImage"
-                action-labels="step1Ctrl.myButtonLabels">
-            </image-cropper>
-        </figure>
-
-
-        <button class="btn btn-purple publishStep-maxWidth" ui-sref="publishTwoStep">
-            Próxima etapa!
-        </button>
-
-    </section>
-
-</main>
-
-<!-- https://github.com/bcabanes/angular-image-cropper -->
+<header class="publishHeader"><a href="/" class="header-action header-action-purple"><svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg></a></header><main class="publishMain"><section class="publish-progress"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg> <span class="publish-progress-iconHidden" data-ng-class="{'publish-progress-iconHidden-2': step1Ctrl.hasImage}"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg></span></section><section class="publish publishStep-maxWidth" data-ng-show="!step1Ctrl.hasImage"><h1 class="publish-title">Boa! Uma oferta!</h1><h2 class="publish-subtitle">Primeiro, tire uma foto do produto com a etiqueta do preço indicando a promoção:</h2><label class="imgAdd"><input type="file" id="offer-image-file" accept="image/*"> <svg class="icon icon-add-photo"><use xlink:href="#icon-add-photo"></use></svg></label><button class="btn btn-purple" ui-sref="publishTwoStep" data-ng-disabled="!step1Ctrl.hasImage">Próxima etapa!</button></section><!-- IMG LOAD SHOW --><section class="publish" data-ng-show="step1Ctrl.hasImage"><h1 class="publish-title publishStep-maxWidth">Aí sim!</h1><h2 class="publish-subtitle publishStep-maxWidth">Tudo certo? A foto do produto mostra a etiqueta do preço indicando a promoção</h2><figure class="publish-imgOffer"><image-cropper image-url="assets/img/exemplo/itaipava.jpg" show-controls="false" center-on-init="true" api="step1Ctrl.cropperApi" crop-callback="step1Ctrl.updateResultImage" action-labels="step1Ctrl.myButtonLabels"></image-cropper></figure><img src="" id="crooped-image" alt=""> <button class="btn btn-purple publishStep-maxWidth" data-ng-click="step1Ctrl.crop()">Próxima etapa!</button></section></main><!-- https://github.com/bcabanes/angular-image-cropper -->
