--- a/views/partials/publish/2-step-category.html
+++ b/views/partials/publish/2-step-category.html
@@ -1,111 +1,1 @@
-<header class="publishHeader">
-    <a href="/publicar/etapa-1" class="header-action header-action-purple">
-        <svg class="icon icon-back">
-            <use xlink:href="#icon-back"></use>
-        </svg>
-    </a>
-</header>
-
-<main class="publishMain">
-
-    <section class="publish-progress">
-        <svg class="icon icon-pig">
-            <use xlink:href="#icon-pig"></use>
-        </svg>
-
-        <span class="publish-progress-iconHidden publish-progress-iconHidden-3">
-            <svg class="icon icon-pig">
-                <use xlink:href="#icon-pig"></use>
-            </svg>
-        </span>
-    </section>
-
-
-    <section class="publish publishStep-maxWidth">
-
-        <h1 class="publish-title">
-            Escolha uma categoria
-        </h1>
-
-        <h2 class="publish-subtitle">
-            Qual delas combina mais com a <br> oferta que você está publicando?
-        </h2>
-
-        <ul class="category">
-            <li class="category-type">
-                <label>
-                    <input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="alimentos" id="">
-                    <svg class="icon icon-cat-food">
-                        <use xlink:href="#icon-cat-food"></use>
-                    </svg>
-                    <strong class="category-type-name">
-                        Alimentos
-                    </strong>
-                </label>
-            </li>
-            <li class="category-type">
-                <label>
-                    <input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="bebidas" id="">
-                    <svg class="icon icon-cat-drink">
-                        <use xlink:href="#icon-cat-drink"></use>
-                    </svg>
-                    <strong class="category-type-name">
-                        Bebidas
-                    </strong>
-                </label>
-            </li>
-            <li class="category-type">
-                <label>
-                    <input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="calcados" id="">
-                    <svg class="icon icon-cat-shoe">
-                        <use xlink:href="#icon-cat-shoe"></use>
-                    </svg>
-                    <strong class="category-type-name">
-                        Calçados
-                    </strong>
-                </label>
-            </li>
-            <li class="category-type">
-                <label>
-                    <input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="casa" id="">
-                    <svg class="icon icon-cat-home">
-                        <use xlink:href="#icon-cat-home"></use>
-                    </svg>
-                    <strong class="category-type-name">
-                        Casa
-                    </strong>
-                </label>
-            </li>
-            <li class="category-type">
-                <label>
-                    <input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="eletronicos"  id="">
-                    <svg class="icon icon-cat-electronic">
-                        <use xlink:href="#icon-cat-electronic"></use>
-                    </svg>
-                    <strong class="category-type-name">
-                        Eletrônicos
-                    </strong>
-                </label>
-            </li>
-            <li class="category-type">
-                <label>
-                    <input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="games"  id="">
-                    <svg class="icon icon-cat-game">
-                        <use xlink:href="#icon-cat-game"></use>
-                    </svg>
-                    <strong class="category-type-name">
-                        Games
-                    </strong>
-                </label>
-            </li>
-
-        </ul>
-
-        <button class="btn btn-purple" data-ng-click="stepTwoCtrl.next()" data-ng-disabled="!stepTwoCtrl.category">
-            Próxima etapa!
-        </button>
-
-    </section>
-
-
-</main>
+<header class="publishHeader"><a href="/publicar/etapa-1" class="header-action header-action-purple"><svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg></a></header><main class="publishMain"><section class="publish-progress"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg> <span class="publish-progress-iconHidden publish-progress-iconHidden-3"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg></span></section><section class="publish publishStep-maxWidth"><h1 class="publish-title">Escolha uma categoria</h1><h2 class="publish-subtitle">Qual delas combina mais com a<br>oferta que você está publicando?</h2><ul class="category"><li class="category-type"><label><input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="alimentos" id=""> <svg class="icon icon-cat-food"><use xlink:href="#icon-cat-food"></use></svg> <strong class="category-type-name">Alimentos</strong></label></li><li class="category-type"><label><input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="bebidas" id=""> <svg class="icon icon-cat-drink"><use xlink:href="#icon-cat-drink"></use></svg> <strong class="category-type-name">Bebidas</strong></label></li><li class="category-type"><label><input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="calcados" id=""> <svg class="icon icon-cat-shoe"><use xlink:href="#icon-cat-shoe"></use></svg> <strong class="category-type-name">Calçados</strong></label></li><li class="category-type"><label><input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="casa" id=""> <svg class="icon icon-cat-home"><use xlink:href="#icon-cat-home"></use></svg> <strong class="category-type-name">Casa</strong></label></li><li class="category-type"><label><input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="eletronicos" id=""> <svg class="icon icon-cat-electronic"><use xlink:href="#icon-cat-electronic"></use></svg> <strong class="category-type-name">Eletrônicos</strong></label></li><li class="category-type"><label><input type="radio" name="categoryType" data-ng-model="stepTwoCtrl.category" value="games" id=""> <svg class="icon icon-cat-game"><use xlink:href="#icon-cat-game"></use></svg> <strong class="category-type-name">Games</strong></label></li></ul><button class="btn btn-purple" data-ng-click="stepTwoCtrl.next()" data-ng-disabled="!stepTwoCtrl.category">Próxima etapa!</button></section></main>
