--- a/views/partials/publish/3-step-info.html
+++ b/views/partials/publish/3-step-info.html
@@ -1,115 +1,1 @@
-
-<header class="publishHeader">
-    <a href="/publicar/etapa-2" class="header-action header-action-purple">
-        <svg class="icon icon-back">
-            <use xlink:href="#icon-back"></use>
-        </svg>
-    </a>
-</header>
-
-<main class="publishMain">
-
-    <section class="publish-progress">
-        <svg class="icon icon-pig">
-            <use xlink:href="#icon-pig"></use>
-        </svg>
-
-        <span class="publish-progress-iconHidden publish-progress-iconHidden-4">
-            <svg class="icon icon-pig">
-                <use xlink:href="#icon-pig"></use>
-            </svg>
-        </span>
-    </section>
-
-
-    <section class="publish" ng-show="true">
-
-        <h1 class="publish-title">
-            Estamos quase la!
-        </h1>
-
-        <h2 class="publish-subtitle">
-            Coloque o nome do produto, seu preço,
-            <br>
-            e o lugar onde a oferta acontece!
-        </h2>
-
-        <section class="publish-imgOptions">
-            <img src="assets/img/exemplo/publicar-ex-oferta.png" alt="Oferta" class="publish-imgOptions-image">
-
-            <div class="publish-imgOptions-action">
-                <button class="btnCircle">
-                    <svg class="icon icon-repeat">
-                        <use xlink:href="#icon-repeat"></use>
-                    </svg>
-                </button>
-            </div>
-        </section>
-
-        <section class="publishStep-maxWidth">
-
-            <div class="inputGroup" for="nameProduct">
-                <label for="nameProduct" class="inputGroup-label">
-                    Nome do Produto
-                </label>
-                <input type="text" id="nameProduct" data-ng-model="step3Ctrl.productName" class="inputGroup-field" required>
-            </div>
-
-            <div class="inputGroup">
-                <label class="inputGroup-label" for="descriptionProduct">
-                    Descrição
-                    <small>
-                        (opcional)
-                    </small>
-                </label>
-                <input type="text" id="descriptionProduct" data-ng-model="step3Ctrl.description" class="inputGroup-field">
-            </div>
-
-            <div class="inputGroup">
-                <label class="inputGroup-label" for="priceProduct">
-                    Preço
-                </label>
-                <input type="number" id="priceProduct" data-ng-model="step3Ctrl.price" class="inputGroup-field">
-            </div>
-
-        </section>
-
-        <div class="publish-location">
-            <a href="#location" class="btn btn-white js-publishAutocomplete-open">
-                <svg class="icon icon-map">
-                    <use xlink:href="#icon-map"></use>
-                </svg>
-                <span ng-show="step3Ctrl.place.name">
-                    {{step3Ctrl.place.name}}
-                </span>
-                <span ng-show="!step3Ctrl.place.name">
-                    Definir Local da Oferta
-                </span>
-            </a>
-        </div>
-
-        <button class="btn btn-purple publishStep-maxWidth" data-ng-click="step3Ctrl.submit()" type="submit">
-        <!--<a href="/publicar/etapa-sucesso" class="btn btn-purple publishStep-maxWidth">-->
-            Publicar Oferta!
-        <!-- </a> -->
-        </button>
-
-    </section>
-
-</main>
-
-<aside class="publishAutocomplete" data-ng-class="{'active': publishAutocomplete}">
-
-    <header class="publishHeader">
-        <a href="/publicar/etapa-3#" class="header-action header-action-purple" data-ng-click="publishAutocomplete = false">
-            <svg class="icon icon-back">
-                <use xlink:href="#icon-back"></use>
-            </svg>
-        </a>
-    </header>
-
-    <section>
-        <input id="pac-input" class="publishAutocomplete-field" type="search"
-        placeholder="Digite a localização...">
-    </section>
-</aside>
+<header class="publishHeader"><a href="/publicar/etapa-2" class="header-action header-action-purple"><svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg></a></header><main class="publishMain"><section class="publish-progress"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg> <span class="publish-progress-iconHidden publish-progress-iconHidden-4"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg></span></section><section class="publish" ng-show="true"><h1 class="publish-title">Estamos quase la!</h1><h2 class="publish-subtitle">Coloque o nome do produto, seu preço,<br>e o lugar onde a oferta acontece!</h2><section class="publish-imgOptions"><img src="assets/img/exemplo/publicar-ex-oferta.png" alt="Oferta" class="publish-imgOptions-image"><div class="publish-imgOptions-action"><button class="btnCircle"><svg class="icon icon-repeat"><use xlink:href="#icon-repeat"></use></svg></button></div></section><section class="publishStep-maxWidth"><div class="inputGroup" for="nameProduct"><label for="nameProduct" class="inputGroup-label">Nome do Produto</label><input type="text" id="nameProduct" data-ng-model="step3Ctrl.productName" class="inputGroup-field" required></div><div class="inputGroup"><label class="inputGroup-label" for="descriptionProduct">Descrição <small>(opcional)</small></label><input type="text" id="descriptionProduct" data-ng-model="step3Ctrl.description" class="inputGroup-field"></div><div class="inputGroup"><label class="inputGroup-label" for="priceProduct">Preço</label><input type="number" id="priceProduct" data-ng-model="step3Ctrl.price" class="inputGroup-field"></div></section><div class="publish-location"><a href="#location" class="btn btn-white js-publishAutocomplete-open"><svg class="icon icon-map"><use xlink:href="#icon-map"></use></svg> <span ng-show="step3Ctrl.place.name">{{step3Ctrl.place.name}} </span><span ng-show="!step3Ctrl.place.name">Definir Local da Oferta</span></a></div><button class="btn btn-purple publishStep-maxWidth" data-ng-click="step3Ctrl.submit()" type="submit"><!--<a href="/publicar/etapa-sucesso" class="btn btn-purple publishStep-maxWidth">--> Publicar Oferta!<!-- </a> --></button></section></main><aside class="publishAutocomplete" data-ng-class="{'active': publishAutocomplete}"><header class="publishHeader"><a href="/publicar/etapa-3#" class="header-action header-action-purple" data-ng-click="publishAutocomplete = false"><svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg></a></header><section><input id="pac-input" class="publishAutocomplete-field" type="search" placeholder="Digite a localização..."></section></aside>
