--- a/views/partials/publish/4-step-success.html
+++ b/views/partials/publish/4-step-success.html
@@ -1,50 +1,1 @@
-<main class="stepSuccessMain">
-
-    <a href="/" class="stepSuccess-close">
-        <svg class="icon icon-close">
-            <use xlink:href="#icon-close"></use>
-        </svg>
-    </a>
-    <section class="stepSuccess-product">
-
-        <header class="stepSuccess-product-icons">
-            <svg class="icon icon-pig">
-                <use xlink:href="#icon-pig"></use>
-            </svg>
-            <svg class="icon icon-check">
-                <use xlink:href="#icon-check"></use>
-            </svg>
-        </header>
-
-        <h1 class="stepSuccess-product-title">
-            Sua Oferta foi publicada!
-        </h1>
-        <h2 class="stepSuccess-product-subtitle">
-            Compartilhe pra que todo mundo fique sabendo
-            <strong>:)</strong>
-        </h2>
-
-        <img src="assets/img/exemplo/oferta-2.jpg" alt="Nome Produto" class="stepSuccess-product-imgProduct">
-        <strong class="stepSuccess-product-val">
-            R$ {{publishSuccessCtrl.offerData.price}}
-        </strong>
-        <h4 class="stepSuccess-product-name">
-            {{publishSuccessCtrl.offerData.name}}
-        </h4>
-
-
-        <a class="stepSuccess-product-location">
-            <svg class="icon icon-map">
-                <use xlink:href="#icon-map"></use>
-            </svg>
-            {{publishSuccessCtrl.offerData.place.name}}
-        </a>
-    </section>
-
-    <button class="btn btn-white stepSuccess-product-btnShared">
-        <svg class="icon icon-shared">
-            <use xlink:href="#icon-shared"></use>
-        </svg>
-        Compartilhar
-    </button>
-</main>
+<main class="stepSuccessMain"><a href="/" class="stepSuccess-close"><svg class="icon icon-close"><use xlink:href="#icon-close"></use></svg></a><section class="stepSuccess-product"><header class="stepSuccess-product-icons"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg> <svg class="icon icon-check"><use xlink:href="#icon-check"></use></svg></header><h1 class="stepSuccess-product-title">Sua Oferta foi publicada!</h1><h2 class="stepSuccess-product-subtitle">Compartilhe pra que todo mundo fique sabendo <strong>:)</strong></h2><img src="assets/img/exemplo/oferta-2.jpg" alt="Nome Produto" class="stepSuccess-product-imgProduct"> <strong class="stepSuccess-product-val">R$ {{publishSuccessCtrl.offerData.price}}</strong><h4 class="stepSuccess-product-name">{{publishSuccessCtrl.offerData.name}}</h4><a class="stepSuccess-product-location"><svg class="icon icon-map"><use xlink:href="#icon-map"></use></svg> {{publishSuccessCtrl.offerData.place.name}}</a></section><button class="btn btn-white stepSuccess-product-btnShared"><svg class="icon icon-shared"><use xlink:href="#icon-shared"></use></svg> Compartilhar</button></main>
