--- a/views/loginEmail.html
+++ b/views/loginEmail.html
@@ -1,45 +1,1 @@
-<main class="login">
-    <h1 class="login-title">
-        O caminho mais curto para os descontos
-    </h1>
-
-    <img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164">
-
-    <a href="/login" class="header-action header-action-absolute">
-        <svg class="icon icon-back">
-            <use xlink:href="#icon-back"></use>
-        </svg>
-    </a>
-    <form data-ng-submit="loginEmailCtrl.authenticate()" autocomplete="off" novalidate>
-        {{loginEmailCtrl.error}}
-        <div class="inputGroup login-inputGroup">
-            <svg class="icon icon-menu-user">
-                <use xlink:href="#icon-menu-user"></use>
-            </svg>
-            <input type="email" data-ng-model="loginEmailCtrl.credentials.email" class="inputGroup-field" placeholder="seu e-mail" value="">
-        </div>
-        <div class="inputGroup login-inputGroup">
-            <svg class="icon icon-password">
-                <use xlink:href="#icon-password"></use>
-            </svg>
-            <input type="{{inputType}}" data-ng-model="loginEmailCtrl.credentials.password" id="login-password" class="inputGroup-field" placeholder="sua senha" autocomplete="new-password">
-            <svg class="icon icon-eye icon-right" data-ng-click="hideShowPassword()">
-                <use xlink:href="#icon-eye"></use>
-            </svg>
-        </div>
-
-        <a href="/" class="login-forgotPassword">
-            Esqueci minha senha
-        </a>
-
-        <button type="submit" value="Submit" class="btn btn-white login-btnEnter">
-            Entrar
-        </button>
-
-        <a href="/criar-conta" class="login-notAccount">
-            Não tenho conta
-        </a>
-
-    </form>
-
-</main>
+<main class="login"><h1 class="login-title">O caminho mais curto para os descontos</h1><img src="assets/img/offy-logo.svg" alt="Offy - caminho mais curto para os descontos" width="164"> <a href="/login" class="header-action header-action-absolute"><svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg></a><form data-ng-submit="loginEmailCtrl.authenticate()" autocomplete="off" novalidate>{{loginEmailCtrl.error}}<div class="inputGroup login-inputGroup"><svg class="icon icon-menu-user"><use xlink:href="#icon-menu-user"></use></svg> <input type="email" data-ng-model="loginEmailCtrl.credentials.email" class="inputGroup-field" placeholder="seu e-mail" value=""></div><div class="inputGroup login-inputGroup"><svg class="icon icon-password"><use xlink:href="#icon-password"></use></svg> <input type="{{inputType}}" data-ng-model="loginEmailCtrl.credentials.password" id="login-password" class="inputGroup-field" placeholder="sua senha" autocomplete="new-password"> <svg class="icon icon-eye icon-right" data-ng-click="hideShowPassword()"><use xlink:href="#icon-eye"></use></svg></div><a href="/" class="login-forgotPassword">Esqueci minha senha </a><button type="submit" value="Submit" class="btn btn-white login-btnEnter">Entrar</button> <a href="/criar-conta" class="login-notAccount">Não tenho conta</a></form></main>
