--- a/views/partials/menu.html
+++ b/views/partials/menu.html
@@ -1,46 +1,1 @@
-<nav class="menu">
-
-	<a href="/" class="menu-link" data-ng-class="{'active': $location.path() === '/'}">
-		<svg class="icon icon-menu-offers">
-			<title>Ofertas</title>
-			<use xlink:href="#icon-menu-offers"></use>
-		</svg>
-		<strong class="menu-link-name">
-			Ofertas
-		</strong>
-	</a>
-	<a href="/alertas" class="menu-link" data-ng-class="{'active': $location.path() === '/alerts'}">
-		<svg class="icon icon-menu-alerts">
-			<title>Alertas</title>
-			<use xlink:href="#icon-menu-alerts"></use>
-		</svg>
-		<strong class="menu-link-name">
-			Alertas
-		</strong>
-	</a>
-	<a href="/publicar/etapa-1" class="menu-link">
-		<svg class="icon icon-menu-add">
-			<title>Publicar Oferta</title>
-			<use xlink:href="#icon-menu-add"></use>
-		</svg>
-	</a>
-	<a href="/favoritos" class="menu-link" data-ng-class="{'active': $location.path() === '/favorites'}">
-		<svg class="icon icon-menu-pig">
-			<title>Favoritos</title>
-			<use xlink:href="#icon-menu-pig"></use>
-		</svg>
-		<strong class="menu-link-name">
-			Favoritos
-		</strong>
-	</a>
-	<a href="/perfil" class="menu-link" data-ng-class="{'active': $location.path() === '/profile'}">
-		<svg class="icon icon-menu-user">
-			<title>Perfil</title>
-			<use xlink:href="#icon-menu-user"></use>
-		</svg>
-		<strong class="menu-link-name">
-			Perfil
-		</strong>
-	</a>
-</nav>
-
+<nav class="menu"><a href="/" class="menu-link" data-ng-class="{'active': $location.path() === '/'}"><svg class="icon icon-menu-offers"><title>Ofertas</title><use xlink:href="#icon-menu-offers"></use></svg> <strong class="menu-link-name">Ofertas </strong></a><a href="/alertas" class="menu-link" data-ng-class="{'active': $location.path() === '/alerts'}"><svg class="icon icon-menu-alerts"><title>Alertas</title><use xlink:href="#icon-menu-alerts"></use></svg> <strong class="menu-link-name">Alertas </strong></a><a href="/publicar/etapa-1" class="menu-link"><svg class="icon icon-menu-add"><title>Publicar Oferta</title><use xlink:href="#icon-menu-add"></use></svg> </a><a href="/favoritos" class="menu-link" data-ng-class="{'active': $location.path() === '/favorites'}"><svg class="icon icon-menu-pig"><title>Favoritos</title><use xlink:href="#icon-menu-pig"></use></svg> <strong class="menu-link-name">Favoritos </strong></a><a href="/perfil" class="menu-link" data-ng-class="{'active': $location.path() === '/profile'}"><svg class="icon icon-menu-user"><title>Perfil</title><use xlink:href="#icon-menu-user"></use></svg> <strong class="menu-link-name">Perfil</strong></a></nav>
