--- a/views/profile.html
+++ b/views/profile.html
@@ -1,73 +1,1 @@
-<header class="header">
-    <a href="/" class="header-action">
-        <svg class="icon icon-back">
-            <use xlink:href="#icon-back"></use>
-        </svg>
-    </a>
-
-    <h1 class="header-title">
-        Perfil
-    </h1>
-
-    <a href="#comparti" class="header-action singleOfferHeader-shared">
-        <svg class="icon icon-shared">
-            <use xlink:href="#icon-shared"></use>
-        </svg>
-    </a>
-
-    <a href="#option" class="header-action singleOfferHeader-option">
-        <svg class="icon icon-option">
-            <use xlink:href="#icon-option"></use>
-        </svg>
-    </a>
-</header>
-
-
-<main class="profileUserMain">
-    <section class="profileUser">
-        <img src="{{profileCtrl.user.facebook.picture}}" alt="{{profileCtrl.user.facebook.name}}"
-        class="profileUser-img">
-
-        <div class="profileUser-info">
-            <h2 class="profileUser-name">
-                {{profileCtrl.user.facebook.name}}
-            </h2>
-            <h3 class="profileUser-city">
-                São Paulo - SP
-            </h3>
-
-            <ul class="profileUser-options">
-                <li class="profileUser-options-list">
-                    <svg class="icon icon-tag">
-                        <use xlink:href="#icon-tag"></use>
-                    </svg>
-                    <strong class="profileUser-options-total">
-                        25
-                    </strong>
-                    <strong class="profileUser-options-val  ">
-                        Ofertas
-                    </strong>
-                </li>
-                <li class="profileUser-options-list">
-                    <svg class="icon icon-pig">
-                        <use xlink:href="#icon-pig"></use>
-                    </svg>
-                    <strong class="profileUser-options-total">
-                        105
-                    </strong>
-                    <strong class="profileUser-options-val  ">
-                        Favoritos
-                    </strong>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <button class="btn btn-purple" data-ng-click="profileCtrl.logout()">Sair</button>
-
-    <div data-ng-include="'views/partials/offer-list.html'"></div>
-
-
-</main>
-
-<div data-ng-include="'views/partials/menu.html'"></div>
+<header class="header"><a href="/" class="header-action"><svg class="icon icon-back"><use xlink:href="#icon-back"></use></svg></a><h1 class="header-title">Perfil</h1><a href="#comparti" class="header-action singleOfferHeader-shared"><svg class="icon icon-shared"><use xlink:href="#icon-shared"></use></svg> </a><a href="#option" class="header-action singleOfferHeader-option"><svg class="icon icon-option"><use xlink:href="#icon-option"></use></svg></a></header><main class="profileUserMain"><section class="profileUser"><img src="{{profileCtrl.user.facebook.picture}}" alt="{{profileCtrl.user.facebook.name}}" class="profileUser-img"><div class="profileUser-info"><h2 class="profileUser-name">{{profileCtrl.user.facebook.name}}</h2><h3 class="profileUser-city">São Paulo - SP</h3><ul class="profileUser-options"><li class="profileUser-options-list"><svg class="icon icon-tag"><use xlink:href="#icon-tag"></use></svg> <strong class="profileUser-options-total">25 </strong><strong class="profileUser-options-val">Ofertas</strong></li><li class="profileUser-options-list"><svg class="icon icon-pig"><use xlink:href="#icon-pig"></use></svg> <strong class="profileUser-options-total">105 </strong><strong class="profileUser-options-val">Favoritos</strong></li></ul></div></section><button class="btn btn-purple" data-ng-click="profileCtrl.logout()">Sair</button><div data-ng-include="'views/partials/offer-list.html'"></div></main><div data-ng-include="'views/partials/menu.html'"></div>
